# RecursiveCompressorHF

./: .env.example  .gitignore  CLAUDE.md  README.md  README_en.md  configuration_recursive_compressor.py  dataset.py  justfile  main.py  predict.py  predict_fast.py  predict_naive.py  predict_stream.py  pyproject.toml  recursive_compressor.py  recursive_compressor_lm.py  recursive_compressor_lm_pipeline.py  test_lm.py  train.py  train_pipeline.py
doc/: implement-language-model.md
instruction-for-claude/: implement-predict-fast.md  instruct-finetune.md  pass-compressor-query.md  refine-dataset.md  refine-training.md  utilize-huggingface.md
instruction_for_claude/: implement-sequence-input.md
